# goit-pythonweb-hw-012

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/versions/: 0245aa26ceea_add_additional_data_to_contacts.py  3893e7d7d122_initial_schema_with_reset_token.py
docs/source/: conf.py  installation.rst
docs/source/modules/: repository.rst  schemas.rst  services.rst
src/api/: auth.py  contacts.py
src/auth/: handlers.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
src/schemas/: users.py
src/services/: auth.py  email.py  redis_client.py  security.py  templates.py
src/utils/: __init__.py  datetime_utils.py
templates/: reset_password.html
tests/: conftest.py  coverage_test.py  test_auth_handlers.py  test_auth_service.py  test_cloudinary.py  test_contacts.py  test_email.py  test_hashing.py  test_integration_auth.py  test_integration_contacts.py  test_integration_main.py  test_integration_utils.py  test_main.py  test_redis_client.py  test_repository_contacts.py  test_security.py  test_templates.py  test_utils.py
