[tool.poetry]
name = "goit-pythonweb-hw-12"
version = "0.1.0"
description = "FastAPI app with Redis and PostgreSQL"
authors = ["Volodymyr Popov <smartappsvp@gmail.com>"]
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.39"
fastapi = {extras = ["standard"], version = "^0.115.11"}
asyncpg = "^0.30.0"
pydantic = "^2.10.6"
email-validator = "^2.2.0"
greenlet = "^3.1.1"
passlib = "^1.7.4"
python-jose = "^3.4.0"
bcrypt = "<4.0"
redis = "^5.2.1"
black = "^25.1.0"
aiosmtplib = "^4.0.0"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"
slowapi = "^0.1.9"
cloudinary = "^1.43.0"
isort = "^6.0.1"
jose = "^1.0.0"
psycopg2-binary = "^2.9.10"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
